--- a/style/768x1024.css
+++ b/style/768x1024.css
@@ -128,6 +128,38 @@
   transition: 1s;
   z-index: 4;
 }
+.level9 {
+  position: absolute;
+  width: 15%;
+  height: 61px;
+  left: 5%;
+  top: 52px;
+  background: #ff6d33;
+  font-size: 2.3vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: 'Fugue';
+  transition: 1s;
+  z-index: 4;
+}
+.level10 {
+  position: absolute;
+  width: 15%;
+  height: 61px;
+  left: 5%;
+  top: 52px;
+  background: #ff6d33;
+  font-size: 2.3vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: 'Fugue';
+  transition: 1s;
+  z-index: 4;
+}
 .section {
   position: absolute;
   width: 15%;
@@ -288,6 +320,42 @@
   z-index: 3;
 }
 .rules8 {
+  position: absolute;
+  width: 40%;
+  height: 85px;
+  left: 29%;
+  top: 145px;
+  background: #ef561a;
+  font-size: 3.5vw;
+  line-height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-family: 'Fugue';
+  transition: 1s;
+  z-index: 3;
+}
+.rules9 {
+  position: absolute;
+  width: 40%;
+  height: 85px;
+  left: 29%;
+  top: 145px;
+  background: #ef561a;
+  font-size: 3.5vw;
+  line-height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-family: 'Fugue';
+  transition: 1s;
+  z-index: 3;
+}
+.rules10 {
   position: absolute;
   width: 40%;
   height: 85px;
@@ -1107,6 +1175,12 @@
 .form3 {
   display: none;
 }
+.formIP {
+  display: none;
+}
+.formIP2 {
+  display: none;
+}
 .formvert {
   position: absolute;
   top: 0px;
@@ -1143,19 +1217,6 @@
   width: 100%;
   height: 100%;
 } */
-.oblozka {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 1440px;
-  height: 840px;
-  background: url(images/Обложка.png);
-  z-index: 2;
-  transition: .1s;
-  z-index: 2;
-  pointer-events: none;
-  opacity: .4;
-}
 .helper {
   position: absolute;
   top: 0px;
@@ -1240,6 +1301,26 @@ img {
   transition: 1s;
   z-index: 8;
 }
+.helper9 {
+  position: absolute;
+  top: 0px;
+  right: -500px;
+  width: 485px;
+  height: 1024px;
+  background-color: red;
+  transition: 1s;
+  z-index: 7;
+}
+.helper10 {
+  position: absolute;
+  top: 0px;
+  right: -500px;
+  width: 485px;
+  height: 1024px;
+  background-color: red;
+  transition: 1s;
+  z-index: 6;
+}
 .circle {
   position: absolute;
   top: 504px;
@@ -1306,6 +1387,36 @@ img {
   top: 571px;
   width: 120px;
   height: 120px;
+  border-radius: 150px;
+  background: white;
+  transition: 1s;
+}
+.circle8 {
+  position: absolute;
+  left: 32.7%;
+  top: 773px;
+  width: 130px;
+  height: 130px;
+  border-radius: 150px;
+  background: white;
+  transition: 1s;
+}
+.circle9 {
+  position: absolute;
+  left: 63.3%;
+  top: 572px;
+  width: 90px;
+  height: 90px;
+  border-radius: 150px;
+  background: white;
+  transition: 1s;
+}
+.circle10 {
+  position: absolute;
+  left: 18.9%;
+  top: 458px;
+  width: 180px;
+  height: 180px;
   border-radius: 150px;
   background: white;
   transition: 1s;
@@ -4010,8 +4121,8 @@ img {
     position: absolute;
     width: 5%;
     height: 118px;
-    left: 36.3%;
-    top: 783.9px;
+    left: 37.8%;
+    top: 767.9px;
     font-size: 14.3vw;
     font-family: 'Conv_SF-Pro-Display-Regular';
     color: white;
@@ -4117,6 +4228,570 @@ img {
     opacity: .4;
     transition: .1s;
   }
+  #w9ord1 {
+    position: absolute;
+    width: 13.6%;
+    height: 245px;
+    left: 22.1%;
+    top: 213px;
+    font-size: 23.7vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord2 {
+    position: absolute;
+    width: 13.6%;
+    height: 245px;
+    left: 40.1%;
+    top: 213px;
+    font-size: 23.7vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord3 {
+    position: absolute;
+    width: 13.6%;
+    height: 245px;
+    left: 58.2%;
+    top: 213px;
+    font-size: 23.7vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord4 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 14.8%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord5 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 25.15%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord6 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 35.5%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord7 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 45.85%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord8 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 56.2%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord9 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 66.55%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord10 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 76.9%;
+    top: 453px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord11 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 132.9%;
+    top: 383px;
+    font-size: 5.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord12 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 14.8%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord13 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 25.15%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord14 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 35.5%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord15 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 45.85%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord16 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 56.2%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  .w9ord17 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 66.55%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Fugue';
+    color: white;
+    transition: 1s;
+  }
+  .w9ord17:hover {
+    opacity: .4;
+    transition: .1s;
+  }
+  #w9ord18 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 76.9%;
+    top: 582px;
+    font-size: 8.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord19 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 132.9%;
+    top: 482px;
+    font-size: 5.5vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord20 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 6.5%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord21 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 18.14%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord22 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 29.78%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord23 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 41.42%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord24 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 53.06%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord25 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 64.7%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord26 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 76.34%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord27 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 88%;
+    top: 740px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord28 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 139.3%;
+    top: 590px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord29 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 136.5%;
+    top: 590px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord30 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 133.6%;
+    top: 590px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord31 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 6.5%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord32 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 18.14%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord33 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 29.78%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord34 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 41.42%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord35 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 53.06%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord36 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 64.7%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord37 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 76.34%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord38 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 88%;
+    top: 875px;
+    font-size: 7.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord39 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 139.3%;
+    top: 675px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord40 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 136.5%;
+    top: 675px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  #w9ord41 {
+    position: absolute;
+    width: 4.9%;
+    height: 87px;
+    left: 133.6%;
+    top: 675px;
+    font-size: 4.4vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+  }
+  .text28 {
+    transition: 1s;
+  }
+  .text28:hover {
+    opacity: .4;
+    transition: .1s;
+  }
+  #w10ord1 {
+    position: absolute;
+    width: 20.7%;
+    height: 270px;
+    left: 4.9%;
+    top: 203px;
+    font-size: 29.3vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord2 {
+    position: absolute;
+    width: 5.5%;
+    height: 148px;
+    left: 30.7%;
+    top: 210px;
+    font-size: 15vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord3 {
+    position: absolute;
+    width: 10.6%;
+    height: 198px;
+    left: 45.6%;
+    top: 297px;
+    font-size: 18.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord4 {
+    position: absolute;
+    width: 10.4%;
+    height: 200px;
+    left: 67.6%;
+    top: 232px;
+    font-size: 17.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord5 {
+    position: absolute;
+    width: 6.3%;
+    height: 146px;
+    left: 86.6%;
+    top: 292px;
+    font-size: 10vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord6 {
+    position: absolute;
+    width: 9.5%;
+    height: 196px;
+    left: 7.4%;
+    top: 597px;
+    font-size: 19.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  .w10ord7 {
+    position: absolute;
+    width: 8.5%;
+    height: 203px;
+    left: 24.8%;
+    top: 463px;
+    font-size: 19.8vw;
+    font-family: 'Conv_ProximaNovaCond-Semibold';
+    color: white;
+    transition: 1s;
+  }
+  .w10ord7:hover {
+    opacity: .4;
+    transition: .1s;
+  }
+  #w10ord8 {
+    position: absolute;
+    width: 7.7%;
+    height: 188px;
+    left: 42.2%;
+    top: 619px;
+    font-size: 18.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord9 {
+    position: absolute;
+    width: 5.5%;
+    height: 178px;
+    left: 55.2%;
+    top: 495px;
+    font-size: 15vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord10 {
+    position: absolute;
+    width: 20.7%;
+    height: 330px;
+    left: 61.8%;
+    top: 610px;
+    font-size: 32.3vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord11 {
+    position: absolute;
+    width: 7.7%;
+    height: 207px;
+    left: 82.2%;
+    top: 450px;
+    font-size: 19.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord12 {
+    position: absolute;
+    width: 3.4%;
+    height: 135px;
+    left: 88.4%;
+    top: 852px;
+    font-size: 14vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  #w10ord13 {
+    position: absolute;
+    width: 8.9%;
+    height: 185px;
+    left: 25.6%;
+    top: 791px;
+    font-size: 19.8vw;
+    font-family: 'Conv_9202';
+    color: white;
+  }
+  .text29 {
+    transition: 1s;
+  }
+  .text29:hover {
+    opacity: .4;
+    transition: .1s;
+  }
   .red {
     color: red;
   }
@@ -4134,4 +4809,263 @@ img {
   }
   .evene {
     pointer-events: none;
+  }
+  .vic1 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 0px;
+    top: -1332px;
+    background: #3C6DF6;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vV {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    transition: 1s;
+  }
+  .vic2 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 14.3%;
+    top: 1068px;
+    background: #7C99EA;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vI {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    transition: 1s;
+  }
+  .vic3 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 28.6%;
+    top: -1332px;
+    background: #FFFFFF;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vC {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3C6DF6;
+    transition: 1s;
+  }
+  .vic4 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 42.8%;
+    top: 1068px;
+    background: #3C6DF6;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vT {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    transition: 1s;
+  }
+  .vic5 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 57.1%;
+    top: -1332px;
+    background: #7C99EA;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vO {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    transition: 1s;
+  }
+  .vic6 {
+    position: absolute;
+    width: 14.3%;
+    height: 1167px;
+    left: 71.3%;
+    top: 1068px;
+    background: #FFFFFF;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vR {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3C6DF6;
+    transition: 1s;
+  }
+  .vic7 {
+    position: absolute;
+    width: 14.5%;
+    height: 1167px;
+    left: 85.6%;
+    top: -1332px;
+    background: #3C6DF6;
+    border-radius: 160px;
+    transition: .5s;
+    z-index: 10;
+  }
+  .vY {
+    position: absolute;
+    width: 61%;
+    height: 118px;
+    left: 20%;
+    top: 490px;
+    font-family: 'Fugue';
+    font-size: 10.5vw;
+    line-height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    transition: 1s;
+  }
+  .victormove1 {
+    transform: translate(0px, 1240px);
+    transition: 1.5s;
+  }
+  .victormove2 {
+    transform: translate(0px, -1160px);
+    transition: 1.5s;
+  }
+  .victormove3 {
+    transform: translate(0px, -1200px);
+    transition: 3.5s;
+  }
+  .victormove4 {
+    transform: translate(0px, 1200px);
+    transition: 3.5s;
+  }
+  .victext1 {
+    position: absolute;
+    width: 28.5%;
+    height: 82px;
+    left: 6%;
+    top: 302px;
+    font-family: 'Fugue';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10.2vw;
+    line-height: 57px;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+  .victext2 {
+    position: absolute;
+    width: 65.5%;
+    height: 82px;
+    left: 6%;
+    top: 425px;
+    font-family: 'Fugue';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 3vw;
+    line-height: 36px;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+  .vinword1 {
+    position: absolute;
+    width: 20.4%;
+    height: 298px;
+    left: 65.6%;
+    top: 91px;
+    font-size: 34.3vw;
+    font-family: 'Conv_Firmin Didot';
+    color: white;
+    transform: rotate(18.89deg);
+  }
+  .vinword2 {
+    position: absolute;
+    width: 13.6%;
+    height: 245px;
+    left: 71.4%;
+    top: 519px;
+    font-size: 25.7vw;
+    font-family: 'Conv_Acrom-Medium';
+    color: white;
+    transform: rotate(-16.66deg);
+  }
+  .vinword3 {
+    position: absolute;
+    width: 7.2%;
+    height: 121px;
+    left: 50.4%;
+    top: 731px;
+    font-size: 13.3vw;
+    font-family: 'Rockwell';
+    color: white;
+    transform: rotate(16.05deg);
   }
